# concurrent-machines

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  concurrent-machines.cabal  default.nix  flake.nix  shell.nix  stack.yaml
.github/workflows/: ci.yml  ci.yml~
examples/: ExampleFanout.hs  Pipeline.hs  concurrent-machines-examples.cabal
nix/: sources.json~
src/Data/Machine/: Concurrent.hs  Fanout.hs  Regulated.hs
src/Data/Machine/Concurrent/: AsyncStep.hs  Buffer.hs  Fanout.hs  Scatter.hs  Tee.hs  Wye.hs
tests/: AllTests.hs  SPlotTests.hs
