name:                concurrent-machines
version:             0.1.0.0
synopsis:            Concurrent networked stream transducers
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           Copyright (C) 2014 Anthony Cowley
category:            Concurrency, Control
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Machine.Concurrent,
                       Data.Machine.Fanout,
                       Data.Machine.Regulated,
                       Data.Machine.Concurrent.AsyncStep,
                       Data.Machine.Concurrent.Buffer,
                       Data.Machine.Concurrent.Fanout,
                       Data.Machine.Concurrent.Scatter,
                       Data.Machine.Concurrent.Tee,
                       Data.Machine.Concurrent.Wye
  -- other-modules:       
  other-extensions:    GADTs, FlexibleContexts, RankNTypes, TupleSections, 
                       ScopedTypeVariables
  build-depends:       base >= 4.6 && < 5, 
                       monad-control >= 0.3 && < 0.4, 
                       transformers >= 0.3 && < 0.4,
                       time >= 1.4 && < 1.5,
                       containers >= 0.5 && < 0.6,
                       transformers-base >= 0.4 && < 0.5,
                       machines >= 0.2.3.1 && < 0.3,
                       async >= 2.0.1 && < 2.1,
                       lifted-async >= 0.1 && < 0.2,
                       semigroups >= 0.8 && < 0.13
  hs-source-dirs:      src
  default-language:    Haskell2010
